--- a/product/templates/layout/home_layout.html
+++ b/product/templates/layout/home_layout.html
@@ -26,8 +26,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <!--link de estilos-->
         <link href=" {% static 'css/estilos.css' %}" rel="stylesheet">
-        {% comment %} <link href=" {% static 'css/login.css' %}" rel="stylesheet">
-         {% endcomment %}
+        <!-- <link href=" {% static 'css/carousel.css' %}" rel="stylesheet"> -->
+        <link href=" {% static 'css/login.css' %}" rel="stylesheet">
+         
         {% comment %} <link href=" {% static 'css/newUser.css' %}" rel="stylesheet">
         <link href=" {% static 'css/recoverPassword.css' %}" rel="stylesheet">
         <link href=" {% static 'css/productViews.css' %}" rel="stylesheet">
@@ -42,7 +43,7 @@
         
             {% endblock content %}
         </div>
-        {% comment %} {% include 'partials/footer.html' %}   {% endcomment %}
+        <!-- {% include 'partials/footer.html' %} -->
 
 
     {% comment %} <!-- iconos libraries -->
@@ -52,7 +53,7 @@
     <script src="{% static 'mail/contact.js' %}"></script> {% endcomment %}
 
     <!-- Template Javascript -->
-    
+    <script src="{% static 'js/carousel.js' %}"></script
 
     <!-- Template Icons Social Media -->
     {% comment %} <script src="https://kit.fontawesome.com/1341a0016b.js" crossorigin="anonymous"></script> {% endcomment %}
