--- a/product/templates/categories/add_categories.html
+++ b/product/templates/categories/add_categories.html
@@ -1,8 +1,6 @@
 {% extends 'layout/home_layout.html' %}
 
 {% block content %}
-
-
 <form method="POST" class="bg-light p-3">
     {% csrf_token %}
     <div class="row">
@@ -11,6 +9,6 @@
             {{ form.as_p }}
         </div>    
     </div>
-    <button type="submit" class="btn btn-primary mt-3">salvar</button>
+    <button type="submit" class="btn btn-primary mt-3">Salvar</button>
 </form>
 {% endblock %}
