--- a/product/templates/products/add_products.html
+++ b/product/templates/products/add_products.html
@@ -1,13 +1,11 @@
 {% extends "layout/home_layout.html" %}
-{% load static %}
 
 {% block content %}
 <form method="POST" class="bg-light p-3">
     {% csrf_token %}
-    
     <div class="form-group">
         {{ form.as_p }}
     </div>    
-    <button type="submit"  class="xd">Guardar</button>
+    <button type="submit" class="btn btn-primary">Guardar</button>
 </form>
 {% endblock %}
