--- a/product/templates/home.html
+++ b/product/templates/home.html
@@ -22,7 +22,7 @@
         <div class="col-lg-4 col-md-4 col-sm-4 pb-1"> <!-- Cambio a col-lg-4, col-md-4, col-sm-4 -->
             <div class="d-flex align-items-center justify-content-center border mb-4" style="padding: 20px;">
                 <h1 class="fa text-primary m-0 mr-12"><box-icon class="tarjeta" name='package' type='solid' style="font-size: 39x;" ></box-icon></h1>
-                <h5 class="font-weight-semi-bold m-0">PAQUETES</h5>
+                <h5 class="font-weight-semi-bold m-0">Paquetes</h5>
                 
             </div>
         </div>
@@ -35,7 +35,7 @@
         <div class="col-lg-4 col-md-4 col-sm-4 pb-1"> <!-- Cambio a col-lg-4, col-md-4, col-sm-4 -->
             <div class="d-flex align-items-center justify-content-center border mb-4" style="padding: 20px;">
                 <h1 class="fa text-primary m-0 mr-3"><box-icon class="tarjeta" name='location-plus' ></box-icon></h1>
-                <h5 class="font-weight-semi-bold m-0">UBICACION</h5>
+                <h5 class="font-weight-semi-bold m-0">Ubicacion</h5>
             </div>
         </div>
     </div>
@@ -45,7 +45,7 @@
 <div class="container-fluid pt-5">
     <div class="text-center mb-4">
         <div>
-            <h2 class="productos-titulo px-5"><span class="px-2">productos</span></h2>
+            <h2 class="productos-titulo px-5"><span class="px-2">Productos</span></h2>
         </div>
         <div class="product-container">
             <div class="producto">
@@ -53,83 +53,83 @@
                     <img src="{% static  '/img/Aretes I/2022 1.jpeg' %}">
                     <div class="description">
                         <a href="#">anadir al carro</a>
-                        <a href="#">ver producto</a>
+                        <a href="#">Ver producto</a>
                     </div>
                 </div>
                 <div class="card-content">
-                    <h2 class="card-title">Earrings Product 1</h2>
-                    <p class="card-description">Description of earrings product 1.</p>
-                    <p class="card-price">$19.99</p>
+                    <h2 class="card-title">aretes</h2>
+                    <p class="card-description">Aretes elaborados con: Murano, Mostacilla checa y Herrajes.</p>
+                    <p class="card-price">$33.000</p>
                 </div>
             </div>
             <div class="producto">
                 <div class="ui-card">
-                    <img src="{% static  '/img/Aretes I/2022 1.jpeg' %}">
+                    <img src="{% static  '/img/Aretes I/2022 2.jpeg' %}">
                     <div class="description">
-                        <a href="#">Add to Cart</a>
-                        <a href="#">View Product</a>
+                        <a href="#">Agregar carro</a>
+                        <a href="#">Ver producto</a>
                     </div>
                 </div>
                 <div class="card-content">
-                    <h2 class="card-title">Earrings Product 1</h2>
-                    <p class="card-description">Description of earrings product 1.</p>
-                    <p class="card-price">$19.99</p>
+                    <h2 class="card-title">aretes</h2>
+                    <p class="card-description">Aretes elaborados con: Murano, Mostacilla checa y Herrajes.</p>
+                    <p class="card-price">$33.000</p>
                 </div>
             </div>
             <div class="producto">
                 <div class="ui-card">
-                    <img src="{% static  '/img/Aretes I/2022 1.jpeg' %}">
+                    <img src="{% static  '/img/Aretes I/2022 3.jpeg' %}">
                     <div class="description">
-                        <a href="#">Add to Cart</a>
-                        <a href="#">View Product</a>
+                        <a href="#">anadir al carro</a>
+                        <a href="#">Ver producto</a>
                     </div>
                 </div>
                 <div class="card-content">
-                    <h2 class="card-title">Earrings Product 1</h2>
-                    <p class="card-description">Description of earrings product 1.</p>
-                    <p class="card-price">$19.99</p>
+                    <h2 class="card-title">aretes</h2>
+                    <p class="card-description">Aretes elaborados con: Murano, Mostacilla checa y Herrajes.</p>
+                    <p class="card-price">$33.000</p>
                 </div>
             </div>
             <div class="producto">
                 <div class="ui-card ">
-                    <img src="{% static  '/img/Aretes I/2022 1.jpeg' %}">
+                    <img src="{% static  '/img/Aretes I/2022 4.jpeg' %}">
                     <div class="description">
-                        <a href="#">Add to Cart</a>
-                        <a href="#">View Product</a>
+                        <a href="#">anadir al carro</a>
+                        <a href="#">Ver producto</a>
                     </div>
                 </div>
                 <div class="card-content">
-                    <h2 class="card-title">Earrings Product 1</h2>
-                    <p class="card-description">Description of earrings product 1.</p>
-                    <p class="card-price">$19.99</p>
+                    <h2 class="card-title">aretes</h2>
+                    <p class="card-description">Aretes elaborados con: Murano, Mostacilla checa y Herrajes.</p>
+                    <p class="card-price">$33.000</p>
                 </div>
             </div>
             <div class="producto">
                 <div class="ui-card">
-                    <img src="{% static  '/img/Aretes I/2022 1.jpeg' %}">
+                    <img src="{% static  '/img/Aretes I/2022 5.jpeg' %}">
                     <div class="description">
-                        <a href="#">Add to Cart</a>
-                        <a href="#">View Product</a>
+                        <a href="#">anadir al carro</a>
+                        <a href="#">Ver producto</a>
                     </div>
                 </div>
                 <div class="card-content">
-                    <h2 class="card-title">Earrings Product 1</h2>
-                    <p class="card-description">Description of earrings product 1.</p>
-                    <p class="card-price">$19.99</p>
+                    <h2 class="card-title">aretes</h2>
+                    <p class="card-description">Aretes elaborados con: Murano, Mostacilla checa y Herrajes.</p>
+                    <p class="card-price">$33.000</p>
                 </div>
             </div>
             <div class="producto">
                 <div class="ui-card">
-                    <img src= "{% static  '/img/Aretes I/2022 1.jpeg' %}" >
+                    <img src= "{% static  '/img/collaresReferencia/Ref C22001.jpg' %}" >
                     <div class="description">
-                        <a href="#">Add to Cart</a>
-                        <a href="#">View Product</a>
+                        <a href="#">anadir al carro</a>
+                        <a href="#">Ver producto</a>
                     </div>
                 </div>
                 <div class="card-content">
-                    <h2 class="card-title">Earrings Product 1</h2>
-                    <p class="card-description">Description of earrings product 1.</p>
-                    <p class="card-price">$19.99</p>
+                    <h2 class="card-title">aretes</h2>
+                    <p class="card-description">Aretes elaborados con: Murano, Mostacilla checa y Herrajes.</p>
+                    <p class="card-price">$33.000</p>
                 </div>
             </div>
         </div><!--hasta aqui va-->
