--- a/product/templates/newUser.html
+++ b/product/templates/newUser.html
@@ -3,8 +3,9 @@
 
 
 {% block content %}
-
-
+<head>
+<link href=" {% static 'css/newUser.css' %}" rel="stylesheet">
+</head>
 <section>
     <div class="container">
         <form action="" id="form" class="form">
