--- a/product/templates/partials/footer.html
+++ b/product/templates/partials/footer.html
@@ -40,10 +40,10 @@
                 <div class="col-xl-4 col-lg-4 mb-50">
                     <div class="footer-widget">
                         <div class="footer-logo">
-                            <a href="index.html"><img src="static/img/logoXilena.jfif" class="img-fluid" alt="logo"></a>
+                            <a href="index.html"><img src="{% static '/img/logoXilena.jfif' %}" class="img-fluid" alt="logo"></a>
                         </div>
                         <div class="footer-text">
-                            <p>descripcion de la pagina</p>
+                            <p>Muestra tu lado más artístico, con nuestros accesorios únicos y hechos a mano</p>
                         </div>
                     </div>
                 </div>
@@ -64,11 +64,11 @@
                             <h3>Subscribete</h3>
                         </div>
                         <div class="footer-text mb-25">
-                            <p>No deje de suscribirse a nuestros nuevos feeds, complete el formulario a continuación.</p>
+                            <p>No deje de suscribirse a nuestros nuevos diseños, complete el formulario a continuación.</p>
                         </div>
                         <div class="subscribe-form">
                             <form action="#">
-                                <input type="text" placeholder="Email Address">
+                                <input type="text" placeholder="Email">
                                 <button><i class="fab fa-telegram-plane"></i></button>
                                 
                             </form>
@@ -77,23 +77,6 @@
                     </div>
                 </div>
                 
-            </div>
-        </div>
-    </div>
-    <div class="copyright-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
-                    <div class="footer-menu">
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">terminos</a></li>
-                            <li><a href="#">Politica</a></li>
-                            <li><a href="#">Privacidad</a></li>
-                            <li><a href="#">Contacto</a></li>
-                        </ul>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
