--- a/product/templates/partials/header.html
+++ b/product/templates/partials/header.html
@@ -9,7 +9,7 @@
     <div class="menuicono row  py-2 px-xl-5">
         <div class="col-lg-6 d-none d-lg-block">
             <div class="d-inline-flex align-items-center">
-                <a class="text-dark" href="">FAQs</a>
+                <a class="text-dark" href="{% url 'FAQs'%}">FAQs</a>
                 <span class="text-muted px-2">|</span>
                 <a class="text-dark" href="{% url 'login'%}">Ingresar</a>
                 <span class="text-muted px-2">|</span>
@@ -45,14 +45,11 @@
         </div> 
         <div class="cajaBusqueda col-lg-3 col-6 ">
             <div class="row">
-                
-                <a href="" class="iconoWhatsapp icono-menu col-1">
-                    <box-icon id="whatsapp-icon" name='whatsapp-square' type='logo' color='#732579'></box-icon>
-                </a>
-                
-                
-                <h4 href="" class="cajaBusqueda text-dark col-md-6"><span class="text-muted col-md-1">|</span>whatsapp</h4>
-            
+                <div class="col-6">
+                    <a href="">
+                        {% comment %} <box-icon name='cart' ></box-icon> {% endcomment %}
+                    </a>
+                </div>
             <!-- Navbar Start -->
                     <button class="navbar-toggler col-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -61,7 +58,7 @@
                         <div class="offcanvas-body">
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">collares</a>
