--- a/product/templates/layout/home_layout.html
+++ b/product/templates/layout/home_layout.html
@@ -28,13 +28,12 @@
         <link href=" {% static 'css/estilos.css' %}" rel="stylesheet">
         <!-- <link href=" {% static 'css/carousel.css' %}" rel="stylesheet"> -->
         <link href=" {% static 'css/login.css' %}" rel="stylesheet">
-         
-        {% comment %} <link href=" {% static 'css/newUser.css' %}" rel="stylesheet">
+        
+        {% comment %} 
         <link href=" {% static 'css/recoverPassword.css' %}" rel="stylesheet">
         <link href=" {% static 'css/productViews.css' %}" rel="stylesheet">
-         {% endcomment %}
+        {% endcomment %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    </head>
     </head>
     <body>
         {% include 'partials/header.html' %}
@@ -43,7 +42,7 @@
         
             {% endblock content %}
         </div>
-        <!-- {% include 'partials/footer.html' %} -->
+        {% include 'partials/footer.html' %}
 
 
     {% comment %} <!-- iconos libraries -->
