--- a/product/templates/layout/home_layout.html
+++ b/product/templates/layout/home_layout.html
@@ -52,7 +52,8 @@
     <script src="{% static 'mail/contact.js' %}"></script> {% endcomment %}
 
     <!-- Template Javascript -->
-    <script src="{% static 'js/carousel.js' %}"></script
+    <script src="{% static 'lib/js/carousel.js' %}"></script>
+    <script src="{% static 'lib/owlcarousel/owl.carousel.min.js' %}"></script>
 
     <!-- Template Icons Social Media -->
     {% comment %} <script src="https://kit.fontawesome.com/1341a0016b.js" crossorigin="anonymous"></script> {% endcomment %}
