--- a/static/css/style.css
+++ b/static/css/style.css
@@ -531,6 +531,11 @@ mark,
   height: auto;
 }
 
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
 .img-thumbnail {
   padding: 0.25rem;
   background-color: #fff;
@@ -9546,12 +9551,24 @@ a.text-dark:hover, a.text-dark:focus {
   right: 0;
 }
 
+.product-offer img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: .5s;
+}
+
+.product-offer:hover img,
+.cat-item:hover .cat-img img {
+  transform: scale(1.2) rotate(5deg);
+}
+
 .cat-item .cat-img img,
 .product-item .product-img img {
   transition: .5s;
 }
 
-.cat-item:hover .cat-img img,
 .product-item:hover .product-img img {
   transform: scale(1.2);
 }
