--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -1,65 +1,73 @@
 
 /*slider*/
-*{
-    box-sizing: border-box;
-}
+
 
 .container-slider{
-    width: 200%;
-    width: 80%;
-    margin: auto;
-    overflow: hidden;
-    box-shadow: #f5ebf2,
-    0 15px 50px;
-    position: relative;
+  margin: auto;
+  width: 70%;
+  max-width: 100%;
+  border-radius: 60px 60px 60px 60px;
+  
+  overflow: hidden;/*ocultar las otras imagenes*/
+  box-shadow: 0 15px 50px #c08fb1;/*color del borde*/
+  
+  position: relative;
 }
 
 .slider{
-    display: flex;
-    width: 480%;
-    height: 350px;
-    object-fit: cover;
+  display: flex;
+  width: 400%;
+  height: 350px;
+  object-fit: cover;
+  margin-left: -100%;
 
 }
-.slider__section{
-    width: 100%;
+.slider_section{
+  width: 100%;
 
 }
 .slider__img{
-    display: clock;
-    width: 100%;
-    height: 900px;
-    object-fit: cover;
+  display: block;
+  width: 100%;
+  height: 580px;
+  object-fit: cover;
 
 }
-.slider__btn{
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    background: rgba(255, 255, 255, 0.7);
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 30px;
-    font-weight: bold;
-    font-family: monospace;
-    text-align: center;
-    border-radius: 50%;
-    cursor: pointer;
+.slider__btn{/*botones de cambiar*/
+  position: absolute;
+  width: 35px;
+  height: 65px;
+  background: rgba(167, 25, 177, 0.7);
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 30px;
+  font-weight: bold;
+  font-family: monospace;
+  text-align: center;
+  border-radius: 4px 4px 4px 4px;
+  cursor: pointer;
 }
 
 .slider__btn:hover {
-    background: #fff;
+  background: #fff;
 
 }
 .slider__btn--left{
-    left: 10px;
+  left: 10px;
 
 }
-.slider__btn--right{
-    right: 10px;
+.slider__btn--right{/*para separar los botones*/
+  right: 10px;
 
 }
 
+.linmorada{
+  margin: 0 auto;
+  margin-top: 2%;
+  width: 80%; /* Ancho de la línea */
+  height: 4px; /* Grosor de la línea */
+  background-color: purple; /* Color morado */
+}
 
 /*images los productos*/
 .product-container {
@@ -502,8 +510,8 @@ body{
 
 /* Estilos para los botones del carrito y corazón */
 .col-lg-3.col-6.text-right .btn {
-  border: 1px solid #007bff;
-  color: #007bff;
+  border: 1px solid #a0f5f9;
+  color: #27b17e;
   margin-left: 10px;
 }
 
@@ -557,7 +565,7 @@ body{
   transition-duration: .3s;
   transition-property: right, visibility;
 }
-/estilo para las tajetas/
+/*estilo para las tajetas*/
 /* Estilos para el contenedor */
 .container-fluid {
   background-color: #f1e5e5; /* Fondo gris claro */
@@ -566,10 +574,17 @@ body{
 /* Estilos para las cajas de contenido */
 .d-flex.align-items-center.justify-content-center.border {
   border: 8px solid #f8f6f6; /* Cambia el estilo del borde según tus preferencias */
-  background-color: #cbdfe6; /* Fondo blanco */
-  border-radius: 10px;
-  padding: 10px;
+  background-color: #D9D9D9; /* Fondo blanco */
+  border-radius: 20px 20px 20px 20px;
+  padding: 400px;
+  width: 70%;
 }
+.custom-item {
+  margin: 0 5px; /* Ajusta el margen horizontal según tu preferencia */
+  padding: 10px; /* Ajusta el relleno según tu preferencia */
+}
+
+
 
 /* Estilos para el texto dentro de las cajas */
 .font-weight-semi-bold {
